# rko_lio-release

./: .cmake-format.py  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  colcon.pkg  debian.store  package.xml  patches.conf  pyproject.toml  releaser_history.json  rosdoc2.yaml  rpm.store  tracks.yaml
.github/: dependabot.yaml
.github/workflows/: bump_fetchcontent.yaml  core_tests.yaml  docs.yaml  ensure_versions_match.yaml  pypi.yaml  python_bindings.yaml  python_bindings_reusable.yaml  python_bindings_windows_11_arm.yaml  ros_build.yaml  ros_build_humble.yaml  ros_build_jazzy.yaml  ros_build_kilted.yaml  ros_build_reusable.yaml  ros_build_rolling.yaml  ros_nightly.yaml
cmake/: compat_target_sources.cmake  dependencies.cmake  mock_find_package.cmake
cmake/dependencies/bonxai/: README.md  bonxai.cmake
cmake/dependencies/catch2/: catch2.cmake
cmake/dependencies/eigen/: eigen.cmake
cmake/dependencies/json/: nlohmann_json.cmake
cmake/dependencies/sophus/: sophus.cmake
cmake/dependencies/tbb/: tbb.cmake
cmake/dependencies/tsl_robin/: tsl_robin.cmake
config/: default.rviz  leg_kilo.yaml  ros_default.yaml
cpp/: CMakeLists.txt
cpp/rko_lio/core/: CMakeLists.txt  lio.cpp  lio.hpp
debian/: changelog  control  copyright  gbp.conf  rules
docs/: Doxyfile  build.md  conf.py  index.rst  suppl.rst
docs/_static/: custom.css
docs/pages/: changelog_literal.rst  config.rst  data.rst  primer.rst  python.rst  quickstart.rst  ros.rst
docs/pages/python/: dataloaders.rst  python.rst  setup.rst  usage.rst
docs/pages/ros/: ros.rst  setup.rst  usage.rst
docs/pages/uncategorised/: core.rst  index.rst  lidar_timestamps.rst
launch/: odometry.launch.py
python/: pyproject.toml
python/pybind/: CMakeLists.txt
rko_lio/: CMakeLists.txt
rko_lio/core/: CMakeLists.txt  lio.cpp  lio.hpp  preprocess_scan.cpp  preprocess_scan.hpp  process_timestamps.cpp  process_timestamps.hpp  profiler.hpp  util.hpp  voxel_down_sample.cpp  voxel_down_sample.hpp  voxel_hash_map.cpp  voxel_hash_map.hpp
rko_lio/python/pybind/: CMakeLists.txt  rko_lio_pybind.cpp
rko_lio/python/rko_lio/: __init__.py  cli.py  config.py  lio.py  lio_pipeline.py  rko_lio.rbl  scoped_profiler.py  util.py
rko_lio/python/rko_lio/dataloaders/: __init__.py  get_dataloader.py  helipr.py  raw.py  rosbag.py  sequencer.py
rko_lio/python/rko_lio/dataloaders/utils/: ros_read_point_cloud.py
rko_lio/ros/: CMakeLists.txt  base_node.cpp  base_node.hpp  node.cpp  node.hpp  offline_node.cpp  online_imu_rate_node.cpp  online_node.cpp  threaded_node.cpp  threaded_node.hpp
rko_lio/ros/utils/: CMakeLists.txt  point_cloud_read.cpp  point_cloud_read.hpp  point_cloud_write.cpp  point_cloud_write.hpp  ros_vectors.hpp  rosbag.cpp  rosbag.hpp  time.hpp  transforms.hpp
rko_lio/ros_utils/: point_cloud_write.cpp  point_cloud_write.hpp
ros/: CMakeLists.txt
ros/config/: default.rviz
ros/launch/: odometry.launch.py
ros/rko_lio/: CMakeLists.txt  node.cpp  node.hpp
ros/rko_lio/ros_utils/: CMakeLists.txt  transforms.hpp
rpm/: ros-humble-rko-lio.spec  ros-jazzy-rko-lio.spec  ros-kilted-rko-lio.spec  ros-lyrical-rko-lio.spec  ros-rolling-rko-lio.spec  template.spec
tests/core/: CMakeLists.txt  eigen_approx.hpp  synthetic_clouds.hpp  test_imu_integration.cpp  test_interval_stats.cpp  test_preprocess_scan.cpp  test_process_timestamps.cpp  test_register_scan.cpp  test_voxel_down_sample.cpp
tests/python/: test_imports.py  test_lio_pipeline.py
tests/python/dataloaders/: test_helipr.py  test_raw.py  test_rosbag.py
