[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "rko_lio"
version = "0.2.0"
description = "A Robust Approach for LiDAR-Inertial Odometry Without Sensor-Specific Modelling"
authors = [{ name = "Meher Malladi", email = "rm.meher97@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: Unix",
]
keywords = [
  "LiDAR",
  "IMU",
  "Odometry",
  "Localization",
  "SLAM",
]
dependencies = [
  "numpy~=2.2",
  "typer>=0.19,<0.21",
  "pyyaml~=6.0",
  "pyquaternion>=0.9,<0.10",
  "tqdm~=4.67"
]

[project.optional-dependencies]
all = [
  "open3d>=0.18,<0.20",
  "rerun-sdk>=0.24,<0.27",
  "rosbags>=0.10,<0.12",
]

[project.urls]
Homepage = "https://github.com/PRBonn/rko_lio"

[project.scripts]
rko_lio = "rko_lio.cli:app"

[tool.scikit-build]
wheel.packages = ["rko_lio/python/rko_lio"]
build-dir = "build/{wheel_tag}"
build.verbose = true
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true

[tool.scikit-build.cmake]
source-dir = "rko_lio/python/pybind"
version = ">=3.28"
build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
RKO_LIO_FETCH_CONTENT_DEPS = "ON"
RKO_LIO_BUILD_ROS = "OFF"

[tool.cibuildwheel]
environment = { GIT_LFS_SKIP_SMUDGE = "1" }
archs = ["auto64"]
skip = ["*-musllinux*", "pp*", "cp38-*", "cp39-*"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=11.0"
archs = ["x86_64", "arm64"]

[tool.pytest]
minversion = "9.0"
addopts = ["-v"]
testpaths = [
  "tests/python"
]
